<resources>
    <string name="app_name">XERMART</string>
    <string name="powered_by">XerxesCodes</string>
    <string name="logo_name">Get A Way</string>
    <string name="search_text">View All</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="categories">categories</string>
    <string name="place">place</string>
    <string name="login">login</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="markets">markets</string>
    <string name="rate_us">rate_us</string>
    <string name="shop_with_us">shop with us</string>
    <string name="xer_logo">xer_logo</string>
    <string name="pick_image">Pick Image</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="vaccination_points">Vaccination Points</string>
    <string name="french">French</string>
    <string name="jamaican">Jamaican</string>
    <string name="login1">lOGIN</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_product_cat">ScrollingActivity</string>
    <string name="large_text">
    </string>
    <string name="pizza">PIZZA</string>
    <string name="signup">signup</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_log">LOGIN</string>
    <string name="title_activity_locations">Map</string>
    <string name="xer_mart">XerMart Delivery</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login2">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logn">LOGIN</string>
    <string name="ee">Enter Email</string>
    <string name="ep">Enter Password</string>
    <string name="si">SIGN IN</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="select_language">Select Language</string>
    <string name="xercv">XerCov</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="order">ORDER</string>
    <string name="order_form">ORDER FORM</string>
    <string name="xercov_delivery">XerCov Delivery</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">Map</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_phone_number">Enter Phone Number</string>
</resources>