<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/layout_bg"
            android:ems="10"
            android:hint="Enter Your Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_below="@+id/edtname"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/layout_bg"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/edtnum"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/edtemail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/layout_bg"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/edtnum"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/layout_bg"
            android:ems="10"
            android:hint="Items"
            android:textColorHint="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/order"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:backgroundTint="#101010" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="343dp"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:gravity="center"
            android:text="@string/order_form"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>