<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#37474f"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/back_presssed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/purple_200"
                    android:padding="15dp"
                    android:src="@drawable/backbtn"></ImageView>

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/purple_200"
                    android:padding="15dp"
                    android:src="@drawable/search_icon"></ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="824dp">

                <EditText
                    android:id="@+id/uemail"
                    android:layout_width="391dp"
                    android:layout_height="75dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="144dp"
                    android:layout_marginEnd="7dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/layout_bg"
                    android:hint="@string/ee"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></EditText>

                <EditText
                    android:id="@+id/upass"
                    android:layout_width="wrap_content"
                    android:layout_height="73dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:inputType="textPassword"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="269dp"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:background="@drawable/layout_bg"
                    android:hint="@string/ep"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"></EditText>

                <Button
                    android:id="@+id/button"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/upass"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="102dp"
                    android:layout_marginLeft="102dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="102dp"
                    android:layout_marginRight="102dp"
                    android:gravity="center"
                    android:text="@string/si"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="#090909" />

                <TextView
                    android:id="@+id/sgnup1"
                    android:layout_width="182dp"
                    android:layout_height="77dp"
                    android:layout_below="@+id/button"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="59dp"
                    android:layout_marginRight="385dp"
                    android:onClick="sgnh"
                    android:gravity="center"
                    android:text="@string/sign_up1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fgtps"
                    android:layout_width="174dp"
                    android:layout_height="77dp"
                    android:layout_below="@+id/button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="29dp"
                    android:layout_marginRight="29dp"
                    android:gravity="center"
                    android:text="@string/forgot_password1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/progressB"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:layout_marginStart="226dp"
                    android:layout_marginLeft="226dp"
                    android:layout_marginTop="214dp"
                    android:layout_marginEnd="254dp"
                    android:layout_marginRight="254dp" />


            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</ScrollView>