<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    tools:context=".User.AllCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_presssed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/backbtn"></ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/search_icon"></ImageView>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="Categories"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@color/teal_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:padding="25dp"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    tools:text="Car Rent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all" />

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:src="@drawable/pizza" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/light_green">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/pizza" />

                <TextView
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="220dp"
                    android:fontFamily=""
                    android:padding="25dp"
                    android:text="@string/vaccination_points"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="Vaccination" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@string/expand_all" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@color/teal_700">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily=""
                    android:padding="25dp"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    tools:text="Car Rent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="@string/expand_all" />

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:src="@drawable/pizza" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>